--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "test": "mocha -r ts-node/register 'test/**/*.{js,ts}'",
     "test:only": "mocha -r ts-node/register",
     "clean": "rm -Rf ./dist",
+    "preinstall": "npm run clean && npm run build:node && npm run build:types && npm run build:browser",
     "prepublishOnly": "npm run clean && npm run build:node && npm run build:types && npm run build:browser",
     "thrift": "thrift -out gen-nodejs --gen js:ts parquet.thrift && thrift -out gen-nodejs --gen js:node parquet.thrift",
     "serve": "node esbuild-serve.js"
